--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
     <!-- HEADER -->
     <header class="header">
-      <div class="container page-header-container">
+      <div class="container header-container">
         <nav class="main-nav">
           <a href="./index.html" lang="en" class="logotype link"> Web<span>Studio</span> </a>
           <ul class="menu list">
