--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
     <!-- HEADER -->
@@ -69,7 +69,7 @@
       <!--  advantages -->
       <section class="advantages section">
         <div class="container">
-          <h2 class="advantages-main-title">Преимущества компании</h2>
+          <h2 class="advantages-title-main">Преимущества компании</h2>
 
           <ul class="advantages-list">
             <li class="advantages-item list">
@@ -130,7 +130,7 @@
           <h2 class="section-title-about">Чем мы занимаемся</h2>
           <ul class="about-list">
             <li class="about-item list">
-              <div class="overlay-about">
+              <div class="about-ovarlay">
                 <img
                   src="./images/img2.jpg"
                   alt="разработка новых приложений"
@@ -142,13 +142,13 @@
             </li>
 
             <li class="about-item list">
-              <div class="overlay-about">
+              <div class="about-ovarlay">
                 <img src="./images/img3.jpg" alt="оформление" width="370" height="295" />
                 <p class="about-ovarlay-text">Мобильные приложения</p>
               </div>
             </li>
             <li class="about-item list">
-              <div class="overlay-about">
+              <div class="about-ovarlay">
                 <img src="./images/img1.jpg" alt="дизайн" width="370" height="295" />
                 <p class="about-ovarlay-text">Дизайнерские решения</p>
               </div>
